--- a/XAI/Base.lproj/Show_iPhone_Sec.storyboard
+++ b/XAI/Base.lproj/Show_iPhone_Sec.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -171,7 +171,7 @@
                     </view>
                     <connections>
                         <outlet property="gEditBtn" destination="AYe-pt-aGB" id="rK0-E1-ekJ"/>
-                        <outlet property="gStatusImgView" destination="w52-f1-YTY" id="dA0-Ij-Kgd"/>
+                        <outlet property="gStatusImgView" destination="xVX-RK-5GA" id="ijR-tG-QZR"/>
                         <outlet property="tableView" destination="LCj-Lb-Sp6" id="rEO-X4-eeh"/>
                         <outlet property="theNavigationItem" destination="0LQ-Kx-j9J" id="1RH-U2-LHm"/>
                         <outlet property="tipImgView" destination="AtZ-XO-hs9" id="RBF-Xq-73Q"/>
